--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 #
-title                : "GJP's Blog"
+title                : "GJP's Blog (nl)"
 email                :
 description          : >- # this means to ignore newlines until the next variable
   Knowledge is power.
@@ -32,13 +32,13 @@ twitter_username     : gert.jan.paulissen@gmail.com
 github_username      : gpaulissen
 minimal_mistakes_skin: default
 search               : true
-url                  : 'https://gpaulissen.github.io'
-repository           : gpaulissen/gpaulissen.github.io
+url                  : 'https://gpaulissen.github.io/blog-nl'
+repository           : gpaulissen/blog-nl
 baseurl              : ''
 highlighter          : rouge
 encoding             : utf-8
 destination          : _site
-lang                 : 'en'             # The language setting is used in /includes/header.html for html-settings
+lang                 : 'nl'             # The language setting is used in /includes/header.html for html-settings
 locale               : 'nl'
 
 # Build settings
@@ -54,7 +54,6 @@ timezone             : CET
 
 include:
   - _pages
-  - nl
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -77,7 +76,6 @@ include:
 # Plugins (previously gems:)
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
   - jemoji
@@ -97,35 +95,20 @@ exclude:
 author:
   name   : "Gert-Jan Paulissen"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Working in the computer industry, playing bridge and living in France as a Dutch guy married with a French girl."
+  bio    : "Leven in Frankrijk als een Nederlander getrouwd met een Française"
   links:
-    - label: "About"
+    - label: "Over"
       icon: "fas fa-fw fa-link"
-      url: "/about"
+      url: "/blog-nl/over"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook"
       url: "https://www.facebook.com/gertjan.paulissen"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gpaulissen"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/gert-jan-paulissen-2508203/"
   
 footer:
   links:
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook"
       url: "https://www.facebook.com/gertjan.paulissen"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/gpaulissen"
-    - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
-      url: "https://www.linkedin.com/in/gert-jan-paulissen-2508203/"
-    - label: Sitemap
-      url: "/sitemap/"
-      type: "application/xml"
 
 #       ____       ____            ____
 #      / __ \___  / __/___ ___  __/ / /_
@@ -147,8 +130,7 @@ defaults:
       comments: false
       share: true
       related: true
-      sitemap: true
-      lang: en
+      sitemap: false
   # _pages
   - scope:
       path: "_pages"
@@ -156,8 +138,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      sitemap: true
-      lang: en
+      sitemap: false
 
 comments:
   provider: "custom"
@@ -171,3 +152,5 @@ tag_archive:
 
 # Frontpage-Layout-Settings
 excerpt_separator: <!--more-->   # Use <!--more--> in your posts to generate an excerpt and a teaser
+
+theme: jekyll-theme-minimal
