--- a/_config_development.yml
+++ b/_config_development.yml
@@ -1,9 +1,9 @@
 remote_theme         : ''
+baseurl              : '/blog-nl'
 theme                : minimal-mistakes-jekyll
 
 plugins:
   - jekyll-paginate
-  - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
   - jemoji
