--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,13 @@
 main:
-  - title: "🇬🇧 (en)"
-    url: /
-  - title: "🇳🇱 (nl)"
-    url: /nl/
-#  - title: "🇫🇷 (fr)"
-#    url: /fr/
   - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "Getting Started"
-    url: /getting-started/
-  - title: "About"
-    url: /about/
+    url: posts
+  - title: "Categorieën"
+    url: categorieen
+#  - title: "Tags"
+#    url: /tags/
+  - title: "Over"
+    url: over
   - title: "Contact"
-    url: /contact/
+    url: /blog/contact/
 
 
