--- a/_config.yml
+++ b/_config.yml
@@ -153,4 +153,4 @@ tag_archive:
 # Frontpage-Layout-Settings
 excerpt_separator: <!--more-->   # Use <!--more--> in your posts to generate an excerpt and a teaser
 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
