--- a/_config.yml
+++ b/_config.yml
@@ -32,9 +32,9 @@ twitter_username     : gert.jan.paulissen@gmail.com
 github_username      : gpaulissen
 minimal_mistakes_skin: default
 search               : true
-url                  : 'https://gpaulissen.github.io/blog-nl'
+url                  : 'https://gpaulissen.github.io'
 repository           : gpaulissen/blog-nl
-baseurl              : ''
+baseurl              : '/blog-nl'
 highlighter          : rouge
 encoding             : utf-8
 destination          : _site
