Contact disabled due to no reponse of Basin

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
 #    url: /tags/
   - title: "Over"
     url: /over/
-  - title: "Contact"
-    url: ../blog/contact/
+#  - title: "Contact"
+#    url: ../blog/contact/
 
 
